--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,51 @@
 
 html,
 body,
-:root {
+:root{
   padding: 0;
+}
+
+@keyframes spin{
+  from{
+    transform: rotate(0deg);
+  }
+  to{
+    transform: rotate(360deg);
+  }
+}
+
+.spin{
+  animation:  spin 30s linear infinite;
+}
+
+@keyframes spinOne{
+  0%{
+    transform: translateX(0);
+  }
+  50%{
+    transform: translateX(90px);
+  }
+  100%{
+    transform: translateX(0);
+  }
+}
+
+.spinOne{
+  animation:  spinOne 7s linear infinite;
+}
+
+.swiper-pagination-bullet-active {
+  opacity: var(--swiper-pagination-bullet-opacity, 1);
+  background: #f0f0f0 !important;
+  padding: 8px !important;
+}
+
+.swiper-pagination-bullet {
+  width: var(--swiper-pagination-bullet-width, var(--swiper-pagination-bullet-size, 8px));
+  height: var(--swiper-pagination-bullet-height, var(--swiper-pagination-bullet-size, 8px));
+  display: inline-block;
+  border-radius: var(--swiper-pagination-bullet-border-radius, 50%);
+  background: #f0f0f0 !important;
+  padding: 8px !important;
+  opacity: var(--swiper-pagination-bullet-inactive-opacity, 0.7);
 }
